app/styles/tailwind.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
    :root {
        --background: 40 100% 97%;
        --foreground: 20 14.3% 4.1%;
        --card: 0 0% 100%;
        --card-foreground: 20 14.3% 4.1%;
        --popover: 0 0% 100%;
        --popover-foreground: 20 14.3% 4.1%;
        --primary: 20 89% 50%;
        --primary-foreground: 60 9.1% 97.8%;
        --secondary: 0 0% 100%;
        --secondary-foreground: 20, 14.3%, 4.1%;
        --muted: 60 4.8% 95.9%;
        --muted-foreground: 25 5.3% 44.7%;
        --accent: 60 4.8% 95.9%;
        --accent-foreground: 24 9.8% 10%;
        --destructive: 0 84.2% 60.2%;
        --destructive-foreground: 60 9.1% 97.8%;
        --primary-active: 20, 88%, 90%, 1;
        --primary-complete: 140, 54%, 89%, 1;
        --primary-disabled: 0, 0%, 91%, 1;
        --primary-active-foreground: 20, 89%, 50%, 1;
        --primary-complete-foreground: 140, 64%, 45%, 1;
        --primary-disabled-foreground: 0, 0%, 0%, 0.3;
        --complete-border: 140, 63%, 36%, 0.1;
        --active-border: 20, 87%, 40%, 0.2;
        --disabled-border: 0, 0%, 0%, 0.1;
        --border: 20 5.9% 90%;
        --input: 20 5.9% 90%;
        --ring: 24.6 95% 53.1%;
        --radius: 0.5rem;
        --base-padding: 1.75rem;
    }

    .dark {
        --background: 20 14.3% 4.1%;
        --foreground: 60 9.1% 97.8%;
        --card: 12 6.5% 15.1%;
        --card-foreground: 60 9.1% 97.8%;
        --popover: 20 14.3% 4.1%;
        --popover-foreground: 60 9.1% 97.8%;
        --primary: 20.5 90.2% 48.2%;
        --primary-foreground: 60 9.1% 97.8%;
        --secondary: 12 6.5% 15.1%;
        --secondary-foreground: 60 9.1% 97.8%;
        --muted: 12 6.5% 15.1%;
        --muted-foreground: 24 5.4% 63.9%;
        --accent: 12 6.5% 15.1%;
        --accent-foreground: 60 9.1% 97.8%;
        --destructive: 0 72.2% 50.6%;
        --destructive-foreground: 60 9.1% 97.8%;
        --border: 12 6.5% 15.1%;
        --input: 12 6.5% 15.1%;
        --ring: 20.5 90.2% 48.2%;
        --base-padding: 1.75rem;
    }
}

@font-face {
    font-family: 'Poppins-Bold';
    font-style: normal;
    font-weight: 700;
    src: url('/fonts/Poppins/Poppins-Bold.ttf') format('truetype');
}

@font-face {
    font-family: 'Poppins-Light';
    font-style: normal;
    font-weight: 400;
    src: url('/fonts/Poppins/Poppins-Light.ttf') format('truetype');
}

@font-face {
    font-family: 'Poppins-Black';
    font-style: normal;
    font-weight: 400;
    src: url('/fonts/Poppins/Poppins-Black.ttf') format('truetype');
}

@font-face {
    font-family: 'Co Headline Regular';
    font-style: normal;
    font-weight: normal;
    src:
        local('Co Headline Regular'),
        url('/fonts/Co Headline/Co Headline.woff') format('woff');
}

@font-face {
    font-family: 'Co Headline Light';
    font-style: normal;
    font-weight: normal;
    src:
        local('Co Headline Light'),
        url('/fonts/Co Headline/Co Headline Light.woff') format('woff');
}

@font-face {
    font-family: 'Co Headline Bold';
    font-style: normal;
    font-weight: normal;
    src:
        local('Co Headline Bold'),
        url('/fonts/Co Headline/Co Headline Bold.woff') format('woff');
}

.fill-active-svg {
    svg,
    path {
        @apply fill-active-foreground transition-all duration-300 ease-in-out group-hover:fill-active;
    }
}

.fill-complete-svg {
    svg,
    path {
        @apply fill-complete-foreground transition-all duration-300 ease-in-out group-hover:fill-complete;
    }
}

.fill-disabled-svg {
    svg,
    path {
        @apply fill-disabled-foreground transition-all duration-300 ease-in-out group-hover:fill-disabled;
    }
}

